# scikit-charts

./: .gitignore  README.md  pyproject.toml
doc/: bibliography.txt  goals.txt  main.tex  references.bib  similar_projects.txt
doc/0_scikit_charts/: main.bbl  main.tex  references.bib
doc/0_scikit_charts/back/: appendix_a.aux  appendix_b.aux  appendix_b.tex  appendix_c.aux  appendix_d.aux  printbox.aux
doc/0_scikit_charts/chapters/: closing.aux  figures.aux  introduction.aux  latex.aux  literature.aux  mathematics.aux  printing.aux  thethesis.aux
doc/0_scikit_charts/front/: abstract.aux  kurzfassung.aux  preface.aux
doc/1_introduction/: goals.txt  motivation.txt  problem-defintion.txt
doc/2_basics/: concepts.txt  sota.txt
doc/back/: glossar.tex
doc/chapters/: 1_einleitung.tex  2_grundlagen.tex  3_metriken_diagramme.tex  4_state_of_the_art.tex  5_design.tex  6_implementierung.tex  7_evaluierung.tex
doc/data/: austria.csv
doc/front/: abstract.tex  kurzfassung.tex
scikit_charts/charts/: __init__.py  _bubble_chart.py  _line_chart.py  _partial_dependency_plot.py  _scatter_plot.py
scikit_charts/metrics/: __init__.py  _metrics.py
scikit_charts/shared/: __init__.py  _axes_radio.py  _draggable_axvline.py  _pickable_legend.py  _radio_select.py  _radio_ui_select.py  _toggleable_rectangle_selector.py  _util.py
tests/: __init__.py  test_metrics.py  test_util_functions.py
